[tool.poetry]
name = "repl_python3_Discord-chatbot-with-external-exchanges"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
munch = "^2.5.0"
django-assets-livereload = "^0.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
